# wingz

./: .env.sample  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  report.sql
docs/: API_DOCUMENTATION.md
src/core/: settings.py  urls.py
src/rides/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/rides/migrations/: 0001_initial.py
src/users/: admin.py  models.py  tests.py
src/users/migrations/: 0001_initial.py
src/wingz/: settings.py  urls.py
wingz-api/: Dockerfile  entrypoint.sh  load_dummy_data.py
wingz-api/core/: asgi.py  pagination.py  permissions.py  settings.py  urls.py  wsgi.py
wingz-api/rides/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
wingz-api/rides/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ride_dropoff_latitude_and_more.py
wingz-api/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
wingz-api/users/migrations/: 0001_initial.py  0002_alter_user_phone_number_alter_user_role.py
